# mailwrapper

./: .env  .env.sample  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  main.rs
src/: main.rs
