[package]
name = "mailbridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-imap = "0.10"
async-native-tls = "0.5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
